--- a/ui/app.html
+++ b/ui/app.html
@@ -1,144 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sports Person Classifier</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./dropzone.min.css">
-    <link rel="stylesheet" href="./app.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Sports Person Classifier</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="./dropzone.min.css"/>
+  <link rel="stylesheet" href="./app.css"/>
 </head>
+<body class="bg-light">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
+    <div class="container justify-content-center">
+      <a class="navbar-brand font-weight-bold text-uppercase" href="#">Sports Classifier</a>
+    </div>
+  </nav>
 
-<body>
-    <nav class="navbar navbar-light bg-light justify-content-center">
-        <a class="navbar-brand" href="#">Sports Person Classifier</a>
-    </nav>
-
-    <div class="container">
-        <div class="row">
-        <div class="col card-wrapper" data-player="lionel_messi">
-                <div class="card border-0">
-                    <div class="position-relative rounded-circle overflow-hidden mx-auto custom-circle-image">
-                        <img class="w-100 h-100" src="./images/messi.jpeg" alt="Card image cap">
-                    </div>
-                    <div class="card-body text-center mt-4">
-                        <h4 class="text-uppercase card-title">Lionel Messi</h4>
-                        </p>
-                    </div>
-                </div>
-            </div>            
-            <div class="col card-wrapper" data-player="maria_sharapova">
-                    <div class="card border-0">
-                        <div class="position-relative rounded-circle overflow-hidden mx-auto custom-circle-image">
-                            <img class="w-100 h-100" src="./images/sharapova.jpeg" alt="Card image cap">
-                        </div>
-                        <div class="card-body text-center mt-4">
-                            <h4 class="text-uppercase card-title">Maria Sharapova</h4>
-                            </p>
-                        </div>
-                    </div>
-            </div>            
-            <div class="col card-wrapper" data-player="roger_federer">
-                    <div class="card border-0">
-                        <div class="position-relative rounded-circle overflow-hidden mx-auto custom-circle-image">
-                            <img class="w-100 h-100" src="./images/federer.jpeg" alt="Card image cap">
-                        </div>
-                        <div class="card-body text-center mt-4">
-                            <h4 class="text-uppercase card-title">Roger Federer</h4>
-                            </p>
-                        </div>
-                    </div>
-            </div>          
-
-            <div class="col card-wrapper" data-player="serena_williams">
-                <div class="card border-0">
-                    <div class="position-relative rounded-circle overflow-hidden mx-auto custom-circle-image">
-                        <img class="w-100 h-100" src="./images/serena.jpeg" alt="Card image cap">
-                    </div>
-                    <div class="card-body text-center mt-4">
-                        <h4 class="text-uppercase card-title">Serena Williams</h4>
-                        </p>
-                    </div>
-                </div>
-            </div>      
-
-            <div class="col card-wrapper" data-player="virat_kohli">
-                <div class="card border-0">
-                    <div class="position-relative rounded-circle overflow-hidden mx-auto custom-circle-image">
-                        <img class="w-100 h-100" src="./images/virat.jpeg" alt="Card image cap">
-                    </div>
-                    <div class="card-body text-center mt-4">
-                        <h4 class="text-uppercase card-title">Virat Kohli</h4>
-                        </p>
-                    </div>
-                </div>
-            </div>
-
+  <div class="container mt-5">
+    <div class="row text-center">
+      <!-- Player cards -->
+      <div class="col card-wrapper" data-player="lionel_messi">
+        <div class="card profile-card">
+          <div class="profile-img">
+            <img src="./images/lionel-messi.jpg" alt="Lionel Messi"/>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Lionel Messi</h5>
+          </div>
         </div>
-
-        <div class="row">
-            <div class="col-sm-4">
-                <div class="row">
-                    <div class="col-12 mx-auto">
-                        <form action="/file-upload" class="dropzone" id="dropzone">
-                            <div class="dz-message needsclick">
-                                <img src="./images/upload.png" width="50vw" height="50vw"><br>
-                                <span class="note needsclick">Drop files here or click to upload</span>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                <div class="row mt-3">
-                    <div class="col-3 mx-auto">
-                        <button id="submitBtn" type="button" class="btn btn-success">Classify</button>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="col-sm-8 error" id="error" >
-                <p>Can't classify image. Classifier was not able to detect face and two eyes properly</p>    
-            </div>
-
-            <div class="col-sm-4" id="resultHolder">
-            </div>
-            <div class="col-sm-4" id="divClassTable">
-                <table id="classTable">
-                        <tr>
-                            <th>Player</th>
-                            <th>Probability Score</th>
-                        </tr>
-                        <tr>
-                            <td>Leonel Messi</td>
-                            <td id="score_lionel_messi"></td>
-                        </tr>
-                        <tr>
-                            <td>Maria Sharapova</td>
-                            <td id="score_maria_sharapova"></td>
-                        </tr>
-                        <tr>
-                            <td>Rodger Federer</td>
-                            <td id="score_roger_federer"></td>
-                        </tr>
-                        <tr>
-                            <td>Serena Williams</td>
-                            <td id="score_serena_williams"></td>
-                        </tr>
-                        <tr>
-                            <td>Virat Kohli</td>
-                            <td id="score_virat_kohli"></td>
-                        </tr>
-                </table>
-            </div>
-            
+      </div>
+      <div class="col card-wrapper" data-player="maria_sharapova">
+        <div class="card profile-card">
+          <div class="profile-img">
+            <img src="./images/Maria_Sharapova.jpg" alt="Maria Sharapova"/>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Maria Sharapova</h5>
+          </div>
         </div>
-
+      </div>
+      <div class="col card-wrapper" data-player="roger_federer">
+        <div class="card profile-card">
+          <div class="profile-img">
+            <img src="./images/Roger_Federer.jpg" alt="Roger Federer"/>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Roger Federer</h5>
+          </div>
+        </div>
+      </div>
+      <div class="col card-wrapper" data-player="serena_williams">
+        <div class="card profile-card">
+          <div class="profile-img">
+            <img src="./images/Serena_Williams.jpg" alt="Serena Williams"/>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Serena Williams</h5>
+          </div>
+        </div>
+      </div>
+      <div class="col card-wrapper" data-player="virat_kohli">
+        <div class="card profile-card">
+          <div class="profile-img">
+            <img src="./images/Virat_kohli.webp" alt="Virat Kohli"/>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Virat Kohli</h5>
+          </div>
+        </div>
+      </div>
     </div>
 
+    <!-- Dropzone & Classification -->
+    <div class="row mt-5">
+      <div class="col-md-5">
+        <form action="/file-upload" class="dropzone shadow rounded" id="dropzone">
+          <div class="dz-message">
+            <img src="./images/upload.png" width="50" height="50"><br/>
+            <span>Drop or click to upload an image</span>
+          </div>
+        </form>
+        <button id="submitBtn" class="btn btn-dark mt-3 w-100">Classify</button>
+      </div>
+
+      <div class="col-md-7">
+        <div class="alert alert-danger text-center d-none" id="error">
+          Unable to detect face and eyes properly.
+        </div>
+
+        <div id="resultHolder" class="text-center mb-3"></div>
+
+        <div id="divClassTable" class="table-responsive d-none">
+          <table class="table table-bordered table-striped bg-white shadow-sm">
+            <thead class="thead-dark">
+              <tr>
+                <th>Player</th>
+                <th>Probability</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr><td>Leonel Messi</td><td id="score_lionel_messi"></td></tr>
+              <tr><td>Maria Sharapova</td><td id="score_maria_sharapova"></td></tr>
+              <tr><td>Roger Federer</td><td id="score_roger_federer"></td></tr>
+              <tr><td>Serena Williams</td><td id="score_serena_williams"></td></tr>
+              <tr><td>Virat Kohli</td><td id="score_virat_kohli"></td></tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Scripts -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  <script src="./dropzone.min.js"></script>
+  <script src="./app.js"></script>
 </body>
-<!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script> -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-<script src="./dropzone.min.js"></script>
-<script src="./app.js"></script>
 </html>
